--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 
-<h2>JavaScript Confirm Box</h2>
+<h2>REACT JAVASCRIPT</h2>
 
 
-<button onclick="myFunction()">Try it</button>
+<button onclick="myFunction()">CLICK</button>
 
 <p id="demo"></p>
 
